# pure_pursuit

./: 11_10_drive.bag  라이다
devel/: .catkin  .rosinstall  _setup_util.py
devel/include/testDrive/: carInfo.h
devel/lib/pkgconfig/: morai_msgs.pc  testDrive.pc
devel/lib/python3/dist-packages/testDrive/msg/: __init__.py  _carInfo.py
devel/lib/testDrive/: testDrive_control  testDrive_gps  testDrive_gps_control  testDrive_makeCsv
devel/share/common-lisp/ros/testDrive/msg/: _package.lisp  _package_carInfo.lisp  carInfo.lisp  testDrive-msg.asd
devel/share/gennodejs/ros/testDrive/msg/: _index.js  carInfo.js
devel/share/morai_msgs/cmake/: morai_msgs-msg-extras.cmake  morai_msgs-msg-paths.cmake  morai_msgsConfig.cmake
devel/share/roseus/ros/morai_msgs/: manifest.l
devel/share/roseus/ros/testDrive/: manifest.l
devel/share/roseus/ros/testDrive/msg/: carInfo.l
devel/share/testDrive/cmake/: testDrive-msg-extras.cmake  testDrive-msg-paths.cmake  testDriveConfig.cmake
src/testDrive/: CMakeLists.txt  package.xml
src/testDrive/include/: .coord.hpp.swo  config.hpp  coord.hpp  csv.hpp  myMath.hpp  ridar.hpp
src/testDrive/msg/: carInfo.msg
src/testDrive/path/: K-City-frenet.csv  K-City-reconstructed.csv  K-City.csv  data.csv  findNonZero.py  left.csv  path.csv  polyResult.csv  ransacResult.csv  right.csv  showData.py  showPath.py  sliced_data.csv  tmpPoint.csv
src/testDrive/src/: control.cpp  frenet.cpp  gps.cpp  gps_control.cpp  makeCsv.cpp  ridar.cpp
src/testDrive/src/data_fitting/: frenet.cpp  poly_reg.cpp  ransac.cpp
src/testDrive/src/ridar/: clustering.cpp  coord.cpp  obstacle.cpp  ransac.cpp  ransac_pcl.cpp
