<?xml version="1.0"?>
<package format="2">
  <name>testDrive</name>
  <version>0.0.0</version>
  <description>The testDrive package</description>

  <maintainer email="yongkingg@todo.todo">yongkingg</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  
  <build_depend>morai_msgs</build_depend>
  <build_export_depend>morai_msgs</build_export_depend>
  <exec_depend>morai_msgs</exec_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  
  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
